seperated game instances between users, both logged in and not logged in

--- a/source/templates/category.html
+++ b/source/templates/category.html
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 		<br>
-			<div class="text-center"><a href='/game' class="btn btn-primary btn-lg" id="startgame">START</a></div>
+			<div class="text-center"><button class="btn btn-primary btn-lg" id="startgame">START</button></div>
 			<div class='col-md-5 text-center option' style="visibility: hidden; display:inline;" id="category"></div>
 		</div>
 {% endblock %}
