--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -18,6 +18,6 @@
 		{% endfor %}
 	</tbody>
 </table>
-<a href = '/game' class = 'btn btn-primary'> Game Page</a>  <a href = '/' class = 'btn btn-primary'> Main Page</a>
+<a href = '/' class = 'btn btn-primary'> Main Page</a>
 
 {% endblock %}
