--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -6,14 +6,18 @@
 
 <h1 class='text-center'>Top Scores</h1>
 
-<!-- Testing Select category -->
+<!-- TODO: the Select category still hard coding, need to implement a function to query the category by group dynamically.-->
 <form action="{{url_for('views.leaderBoardchooseCategory')}}" method="POST">
 	<label for="category">Choose a category</label>
 	<select id="category" name="category">
 		<option value="All" name="All"> -- </option>
 		<option value="Geography" name="Geography">Geography</option>
+		<option value="Science" name="Science">Science</option>
 		<option value="Art" name="Art">Art</option>
-		<option value="ComputerScience" name="Computer Science">Computer Science</option>
+		<option value="TV shows" name="TV shows">TV shows</option>
+		<option value="Mythology" name="Mythology">Mythology</option>
+		<option value="Computer Science" name="Computer Science">Computer Science</option>
+		<option value="Movie" name="Movie">Movie</option>
 
 	</select>
 	<input type="submit" value="Submit">
