feature of sending email and changing password
Using flask-mail and flask isdangerous.

--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -30,10 +30,11 @@
         />
     </div>
 
-    <br />
+    <br>
 
     <!-- Login Button -->
     <button type="submit" class="btn btn-primary">Login</button>
+    <a href="/reset_request">Forgot password?</a>
 
 </form>
 {% endblock %}
