Player profile displays 1 top score for each catergory

--- a/source/templates/player_profile.html
+++ b/source/templates/player_profile.html
@@ -54,7 +54,7 @@
             <li class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
                     <h6 class="my-0">{{s.category}}</h6>
-                    <small class="text-muted">{{s.userid}}</small>
+                    <small class="text-muted">{{s.username}}</small>
                 </div>
                 <span class="text-muted">{{s.score}}</span>
             </li>
