--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -7,13 +7,15 @@
 <table class='table'>
 	<tr>
 		<th>Username</th>
+		<th>Category</th>
 		<th>Score</th>
 	</tr>
 	<tbody class='table-striped'>
 		{% for s in scores %}
 		<tr>
 			<td>{{ s.username }}</td>
-			<td>{{ s.score }}</td>
+            <td>{{ s.category }}</td>
+            <td>{{ s.score }}</td>
 		</tr>
 		{% endfor %}
 	</tbody>
