revert to old profile query code

--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -23,6 +23,10 @@
         <input type="submit" value="Submit">
     </form>
 
+    <div>
+        <h1>TESTING</h1>
+        <p>{{scores}}</p>
+    </div>
 
     <table class='table'>
         <tr>
