going back to classic sql

--- a/source/templates/player_profile.html
+++ b/source/templates/player_profile.html
@@ -61,6 +61,10 @@
                 {% endfor %}
             </ul>
         </div>
+        <div>
+            <h1>TESTING</h1>
+            <p>{{scores}}</p>
+        </div>
     </div>
 
 
