--- a/source/templates/admin/questions.html
+++ b/source/templates/admin/questions.html
@@ -5,8 +5,8 @@
 
     <h1 class='text-center'>Edit Question</h1>
     <table class='table'>
-        <a href='/admin/question/new' class='btn btn-primary'> Add New</a>
-        <a href='/admin' class='btn btn-primary'> Back </a>
+        <a href='/admin/question/new' class='btn btn-primary'> Add New</a>   | 
+        <a href='/admin' class='btn btn-secondary'> Back </a>
         <tr>
             <th>Category</th>
             <th>Question</th>
@@ -27,13 +27,13 @@
                 <td>
                     <form method="POST" action="{{ url_for('admin.edit') }}">
                         <input id="question_id" name="question_id" value="{{ i.id }}" style="visibility: hidden;">
-                        <button type="submit" class="btn btn-primary btn-sm">Edit</button>
+                        <button type="submit" class="btn btn-secondary btn-sm">Edit</button>
                     </form>
                 </td>
                 <td>
                     <form method="POST" action="{{ url_for('admin.delete_question') }}">
                         <input id="question_id" name="question_id" value="{{ i.id }}" style="visibility: hidden;">
-                        <button type="submit" class="btn btn-primary btn-sm">Delete</button>
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                     </form>
                 </td>
             </tr>
