--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -14,7 +14,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
     <!-- JQUERY -->
     <script src="/static/js/j_query.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='/js/test.js') }}"></script>
+   
     {% block head %} {% endblock %}
 
     <title>{% block title %} Home {% endblock %}</title>
@@ -42,6 +42,12 @@
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">
                     SignUp
                 </a>
+            {% endif %}
+            
+            {% if user.admin == 1%}
+            <a class="nav-item nav-link" id="signUp" href="/admin">
+                ADMIN
+            </a>
             {% endif %}
         </div>
     </div>
