--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -41,7 +41,7 @@
                     <td>
                         <form method="POST" action="{{ url_for('admin.delete_score') }}">
                             <input id="score_id" name="score_id" value="{{ s.id }}" style="visibility: hidden;">
-                            <button type="submit" class="btn btn-primary btn-sm">Delete</button>
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                         </form>
                     </td>
                 {% endif %}
