--- a/source/templates/change_password.html
+++ b/source/templates/change_password.html
@@ -22,7 +22,7 @@
         <div class="form-group">
             <label for="confirm_password">Confirm Password</label>
             <input
-                    type="confirm_password"
+                    type="password"
                     class="form-control"
                     id="confirm_password"
                     name="confirm_password"
