--- a/source/templates/admin/edit_question.html
+++ b/source/templates/admin/edit_question.html
@@ -6,68 +6,27 @@
     <br>
     <br>
     <!-- Category -->
-    <div>
-        <h5>Category: {{ question.category }}</h5>
+    <div class="form-group">
+        <h5>EDIT QUESTION!</h5>
         <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="category">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
+            <input type="text" name="question_id" id="question_id" style="visibility: hidden;" value="{{ question.id }}"><br>
+            <label for="cateogry" style="font-weight: bold;">Category: </label>
+                <input  class="form-control" type="text" name="category"  id = 'category'value="{{ question.category }}">
+            <label for="question" style="font-weight: bold;">Question: </label>
+                <input  class="form-control" type="text" name="question" id="question"  value="{{ question.question }}">
+            <label for="answer"   style="font-weight: bold;">answer: </label>
+                <input class="form-control" type="text" name="answer" id="answer" value="{{ question.answer }}">
+            <label for="option_1" style="font-weight: bold;">Option 1: </label>
+                <input class="form-control" type="text" name="option_1"id="option_1" value="{{ question.option_1 }}">
+            <label for="option_2" style="font-weight: bold;">Option 2: </label>
+                <input class="form-control" type="text" name="option_2" id="option_2" value="{{ question.option_2 }}">
+            <label for="option_3" style="font-weight: bold;">Option 3: </label>
+                <input  class="form-control" type="text" name="option_3" id="option_3" value="{{ question.option_3 }}">
+            <br>
+            <button type="submit" class="btn btn-primary btn-sm">UPDATE QUESTION</button>
         </form>
     </div>
     <br>
 
-    <!-- Question -->
-    <div>
-        <h5>Question: {{ question.question }}</h5>
-        <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="question">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
-        </form>
-    </div>
-    <br>
-
-    <!-- Answer -->
-    <div>
-        <h5>Answer: {{ question.answer }}</h5>
-        <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="answer">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
-        </form>
-    </div>
-    <br>
-
-    <!-- Option1 -->
-    <div>
-        <h5>Option1: {{ question.option_1 }}</h5>
-        <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="option1">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
-        </form>
-    </div>
-    <br>
-
-    <!-- Option2 -->
-    <div>
-        <h5>Option2: {{ question.option_2 }}</h5>
-        <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="option2">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
-        </form>
-    </div>
-    <br>
-
-    <!-- Option3 -->
-    <div>
-        <h5>Option3: {{ question.option_3 }}</h5>
-        <form method="POST" action="{{ url_for('admin.edit_question') }}">
-            <a>Edit here:</a><input type="text" name="option3">
-            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-            <input id="question_id" name="question_id" value="{{ question.id }}" style="visibility: hidden;">
-        </form>
-    </div>
-
+    
 {% endblock %}
