fix: delete player

--- a/source/templates/admin/questions.html
+++ b/source/templates/admin/questions.html
@@ -5,7 +5,7 @@
 
     <h1 class='text-center'>Edit Question</h1>
     <table class='table'>
-        <a href='/admin/question/new' class='btn btn-primary'> Add New</a>    
+        <a href='/admin/question/new' class='btn btn-primary'> Add New</a> |  
         <a href='/admin' class='btn btn-secondary'> Back </a>
         <tr>
             <th>Category</th>
