--- a/source/templates/admin/delete_player.html
+++ b/source/templates/admin/delete_player.html
@@ -3,9 +3,8 @@
 {% block title %} delete player page {% endblock %}
 
 {% block content %}
-    <h1>EDIT USERS</h1>
-    <script type="text/javascript" src="{{ url_for('static', filename='/js/test.js') }}"></script>
-    <h1 align="center">Players</h1>
+    <script type="text/javascript" src="{{ url_for('static', filename='/js/delete_player.js') }}"></script>
+    <h1 align="center">Edit Players</h1>
     <ul class="list-group list-group-flush" id="players">
 
         {% for player in players %}
