--- a/source/templates/category.html
+++ b/source/templates/category.html
@@ -8,6 +8,11 @@
 
 {% block title %}Category{% endblock %}
 {% block content %}
+    <style>
+        .option{
+           background-color: green; 
+        }
+    </style>
 
     <div class="container">
         <div class="text-center">
