--- a/source/templates/game.html
+++ b/source/templates/game.html
@@ -3,11 +3,13 @@
 {% block head %}
     <!-- game.js file -->
     <script type="text/javascript" src="{{ url_for('static', filename='/js/game.js') }}"></script>
+    <link rel="stylesheet" href="/static/css/game.css"/>
 {% endblock %}
 
 {% block title %} Game {% endblock %}
 
 {% block content %}
+
     <div class='container' stlye="z-index:0;">
         <div class='container'>
             <div id='main-container' class='container'>
@@ -85,7 +87,7 @@
 
                     </div>
                     <div class='container' id="quit">
-                        ​<a href='/'>QUIT GAME</a>
+                        ​<a href='/' class='btn btn-danger'>QUIT GAME</a>
                     </div>
                     <br>
                 </div>
